# monovm-embed-sample

./: .gitignore  DETAILS.md  LICENSE  Makefile  README.md  os-detect.mk
src/CsharpSample/: CSharpSample.cs  CsharpSample.csproj  Directory.Build.props  MyRoots.xml
src/GetRuntimePack/: Directory.Build.props  GetRuntimePack.csproj
src/native/: CMakeLists.txt  Makefile  gen-managed.sh  main.c
